<resources>
    <string name="app_name">Capture Photo</string>
    <string name="title_activity_main4">Main4Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="vehicle_details">Vehicle details</string>
    <string name="full_name">Full Name</string>
    <string name="policy_no">Policy No</string>
    <string name="manifactured_year">Manifactured Year</string>
    <string name="type">Type</string>
    <string name="textview">TextView</string>
    <string name="model">Model</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="information">Information</string>
    <string name="when_you_are_involved_in_an_auto_accident_involving_injury_or_property_damage_you_need_to_report_it_to_your_insurance_company_as_soon_as_possible_regardless_of_who_is_at_fault_if_you_are_unable_to_report_the_accident_within_two_days_report_it_as_soon_as_possible_after_that_if_you_don_t_report_your_accident_within_a_reasonable_amount_of_time_your_insurance_company_may_not_have_to_honour_your_claim">When you are involved in an auto accident involving injury or property damage, you need to report it to your insurance company as soon as possible, regardless of who is at fault. If you are unable to report the accident within two days, report it as soon as possible after that. If you don’t report your accident within a reasonable amount of time, your insurance company may not have to honour your claim.</string>
    <string name="make_sure_your_details_are_up_to_date_to_save_valuable_time_if_you_have_to_make_a_claim_use_the_accident_claim_button_on_this_app_to_guide_you_through_all_the_vital_information_to_photographs_to_capture_at_the_accident_scene_and_fill_all_the_requirements_has_been_provided_and_email_us">Make sure your details are up to date to save valuable time if you have to make a claim. Use the “Accident Claim” button on this App to guide you through all the vital information to photographs to capture at the accident scene and fill all the requirements has been provided and email us.</string>
    <string name="what_information_should_i_get_if_i_m_in_an_accident">What information should I get if I’m in an accident?</string>
    <string name="report_the_accident_to_insurance_company">Report the Accident to Insurance Company</string>
</resources>
