<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.harshi.capturephoto.MenuActivity"
    android:background="@drawable/gradient_background">


    <TextView
        android:text="@string/vehicle_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="100dp"
        android:id="@+id/textView9"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_bright"
        android:gravity="center" />

    <TextView
        android:text="@string/full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginTop="20dp"
        android:id="@+id/name"
        android:textColor="@android:color/holo_blue_light" />

    <TextView
        android:text="@string/policy_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullName"
        android:layout_alignRight="@+id/name"
        android:layout_alignEnd="@+id/name"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name"
        android:textColor="@android:color/holo_blue_light"
        android:id="@+id/policy" />

    <TextView
        android:text="@string/manifactured_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/policyNumber"
        android:layout_marginTop="20dp"
        android:id="@+id/year"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name"
        android:textColor="@android:color/holo_blue_light" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:focusable="false"
        android:id="@+id/manufactureYear"
        android:layout_below="@+id/policyNumber"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/manufactureYear"
        android:layout_alignLeft="@+id/year"
        android:layout_alignStart="@+id/year"
        android:layout_marginTop="20dp"
        android:id="@+id/type"
        android:textColor="@android:color/holo_blue_light" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:focusable="false"
        android:layout_below="@+id/manufactureYear"
        android:layout_alignLeft="@+id/manufactureYear"
        android:layout_alignStart="@+id/manufactureYear"
        android:id="@+id/typeId" />

    <TextView
        android:text="@string/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button2"
        android:layout_alignLeft="@+id/type"
        android:layout_alignStart="@+id/type"
        android:id="@+id/textView21" />

    <TextView
        android:text="@string/model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/typeId"
        android:layout_alignRight="@+id/policy"
        android:layout_alignEnd="@+id/policy"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/type"
        android:layout_alignStart="@+id/type"
        android:textColor="@android:color/holo_blue_light"
        android:id="@+id/mod" />

    <TextView
        android:text="@string/vehicle_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/model"
        android:layout_marginTop="19dp"
        android:layout_alignRight="@+id/textView9"
        android:layout_alignEnd="@+id/textView9"
        android:textColor="@android:color/holo_blue_light"
        android:layout_alignLeft="@+id/textView13"
        android:layout_alignStart="@+id/textView13"
        android:id="@+id/vehNo" />

    <EditText
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/fullName"
        android:layout_below="@+id/textView9"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/vehicleNumber"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/model" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:focusable="false"
        android:id="@+id/model"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/typeId"
        android:layout_alignBottom="@+id/mod" />

    <include

        layout="@layout/toolbar"
        android:id="@id/my_toolbar"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:focusable="false"
        android:ems="10"
        android:id="@+id/policyNumber"
        android:layout_below="@+id/fullName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
