<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_basic_infor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.harshi.capturephoto.BasicInfor"
    android:background="@drawable/gradient_background">



    <include

        layout="@layout/toolbar"
        android:id="@id/my_toolbar"
        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="4dp">

</LinearLayout>
    <TextView
        android:text="Wellcome to the EasyClaim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:id="@+id/textView"
        android:textSize="22sp"
        android:gravity="center"
        android:textColor="@android:color/holo_blue_bright"
        android:textAlignment="gravity" />

    <TextView
        android:text="@string/when_you_are_involved_in_an_auto_accident_involving_injury_or_property_damage_you_need_to_report_it_to_your_insurance_company_as_soon_as_possible_regardless_of_who_is_at_fault_if_you_are_unable_to_report_the_accident_within_two_days_report_it_as_soon_as_possible_after_that_if_you_don_t_report_your_accident_within_a_reasonable_amount_of_time_your_insurance_company_may_not_have_to_honour_your_claim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="24dp"
        android:id="@+id/textView8"
        android:textAlignment="gravity"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp" />

    <TextView
        android:text="@string/make_sure_your_details_are_up_to_date_to_save_valuable_time_if_you_have_to_make_a_claim_use_the_accident_claim_button_on_this_app_to_guide_you_through_all_the_vital_information_to_photographs_to_capture_at_the_accident_scene_and_fill_all_the_requirements_has_been_provided_and_email_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_marginTop="18dp"
        android:id="@+id/textView11"
        android:textColor="@android:color/holo_blue_light"
        android:textAlignment="gravity"
        android:layout_marginRight="15dp"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10" />

    <TextView
        android:text="@string/what_information_should_i_get_if_i_m_in_an_accident"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textAlignment="gravity" />

    <TextView
        android:text="@string/report_the_accident_to_insurance_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/textView6"
        android:textSize="18sp"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="gravity"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginRight="15dp"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />

</RelativeLayout>
